--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function showQuestion(){
     document.body.innerHTML=`
     <canvas id="starfield"></canvas>
     <div style="text-align:center;margin-top:100px;color:white;">
-        <img src="TWOJ_GIF.gif" width="250"><br><br>
+        <img src="IMG_3395.JPEG" width="250"><br><br>
         <h1>Czy będziesz moją walentynką? ❤️</h1>
         <button id="yesBtn">TAK ❤️</button>
         <button id="noBtn">NIE 😈</button>
