--- a/index.html
+++ b/index.html
@@ -112,9 +112,12 @@ drawStars();
 ======================= */
 
 const lines=[
-"(wpisz tekst)",
-"(wpisz tekst)",
-"(wpisz tekst)"
+"Julus jestes moim najwiekszym skarbem",
+"nie wyobrazam sobie byc z kims innym",
+"jestes moim sloneczkiem gwiazda"
+"i wszytskim co istnieje",
+"kocham cie najmocniej na swiecie",
+"i mam jedno pytanie..."
 ];
 
 let textDiv=document.getElementById("text");
@@ -164,7 +167,7 @@ function showQuestion(){
         <img src="IMG_3395.JPEG" width="250"><br><br>
         <h1>Czy będziesz moją walentynką? ❤️</h1>
         <button id="yesBtn">TAK ❤️</button>
-        <button id="noBtn">NIE 😈</button>
+        <button id="noBtn">NIE :( </button>
         <audio id="music" src="TWOJA_MUZYKA.mp3"></audio>
     </div>
     `;
@@ -197,7 +200,7 @@ function showQuestion(){
         }
 
         setTimeout(()=>{
-            document.body.innerHTML="<h1 style='color:white;text-align:center;margin-top:100px;'>(wpisz tekst końcowy) ❤️</h1>";
+            document.body.innerHTML="<h1 style='color:white;text-align:center;margin-top:100px;'>JEEEEJ KOCHAM CIE MYSZKA ❤️</h1>";
         },1500);
     });
 }
