fUpdate index.html

--- a/index.html
+++ b/index.html
@@ -160,202 +160,7 @@ function showQuestion(){
         <h1>Czy będziesz moją walentynką? ❤️</h1>
         <button id="yesBtn">TAK ❤️</button>
         <button id="noBtn">NIE :(</button>
-        <audio id="music" src="TWOJA_MUZYKA.mp3"></audio>
-    </div>
-    `;
-
-    let music=document.getElementById("music");
-    let noBtn=document.getElementById("noBtn");
-    let yesBtn=document.getElementById("yesBtn");
-
-    music.play();
-
-    noBtn.style.top="60%";
-    noBtn.style.left="55%";
-
-    function move(){
-        noBtn.style.left=Math.random()*(window.innerWidth-100)+"px";
-        noBtn.style.top=Math.random()*(window.innerHeight-50)+"px";
-    }
-
-    noBtn.addEventListener("mouseover",move);
-    noBtn.addEventListener("touchstart",move);
-
-    yesBtn.addEventListener("click",()=>{
-
-        for(let i=0;i<50;i++){
-            let heart=document.createElement("div");
-            heart.innerHTML="❤️";
-            heart.className="heart";
-            heart.style.left=Math.random()*window.innerWidth+"px";
-            heart.style.top=window.innerHeight+"px";
-            document.body.appendChild(heart);
-        }
-
-        // zmiana zdjęcia
-        document.getElementById("mainImg").src="<!DOCTYPE html>
-<html lang="pl">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dla Ciebie ❤️</title>
-
-<style>
-body{
-    margin:0;
-    overflow:hidden;
-    background:black;
-    font-family: 'Courier New', monospace;
-}
-
-canvas{
-    position:fixed;
-    top:0;
-    left:0;
-    transition: filter 1.5s ease;
-}
-
-.text{
-    position:absolute;
-    width:100%;
-    top:45%;
-    text-align:center;
-    font-size:28px;
-    color:#ff4da6;
-    letter-spacing:2px;
-}
-
-button{
-    padding:15px 30px;
-    font-size:20px;
-    border:none;
-    border-radius:12px;
-    cursor:pointer;
-    margin:10px;
-}
-
-#yesBtn{ background:#ff4da6; color:white; }
-#noBtn{ background:gray; color:white; position:absolute; }
-
-.heart{
-    position:absolute;
-    font-size:22px;
-    animation: floatUp 3s linear forwards;
-}
-
-@keyframes floatUp{
-    from { transform:translateY(0); opacity:1; }
-    to { transform:translateY(-250px); opacity:0; }
-}
-</style>
-</head>
-<body>
-
-<canvas id="starfield"></canvas>
-<div id="text" class="text"></div>
-
-<script>
-/* =======================
-   GWIAZDY + LEKKI ZOOM
-======================= */
-
-var canvas = document.getElementById("starfield");
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-var ctx = canvas.getContext("2d");
-
-var stars=[];
-for(let i=0;i<400;i++){
-    stars.push({
-        x:Math.random()*canvas.width,
-        y:Math.random()*canvas.height,
-        r:Math.random()*1.2,
-        o:Math.random()
-    });
-}
-
-let zoom=1;
-
-function drawStars(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    ctx.save();
-    ctx.scale(zoom,zoom);
-
-    stars.forEach(s=>{
-        ctx.beginPath();
-        ctx.arc(s.x,s.y,s.r,0,2*Math.PI);
-        ctx.fillStyle="rgba(255,255,255,"+s.o+")";
-        ctx.fill();
-    });
-
-    ctx.restore();
-    zoom+=0.0004;
-    requestAnimationFrame(drawStars);
-}
-drawStars();
-
-/* =======================
-   TYPEWRITER INTRO
-======================= */
-
-const lines=[
-"Julus jestes moim najwiekszym skarbem",
-"nie wyobrazam sobie byc z kims innym",
-"jestes moim sloneczkiem, gwiazda",
-"i wszystkim co istnieje",
-"kocham cie najmocniej na swiecie",
-"i mam jedno pytanie..."
-];
-
-let textDiv=document.getElementById("text");
-let lineIndex=0;
-let charIndex=0;
-
-function typeWriter(){
-    if(lineIndex<lines.length){
-        if(charIndex<lines[lineIndex].length){
-            textDiv.innerHTML+=lines[lineIndex][charIndex];
-            charIndex++;
-            setTimeout(typeWriter,35);
-        }else{
-            setTimeout(()=>{
-                textDiv.innerHTML="";
-                charIndex=0;
-                lineIndex++;
-                typeWriter();
-            },1300);
-        }
-    }else{
-        cinematicTransition();
-    }
-}
-setTimeout(typeWriter,1000);
-
-/* =======================
-   PRZEJŚCIE
-======================= */
-
-function cinematicTransition(){
-    canvas.style.filter="blur(10px)";
-    textDiv.innerHTML="";
-    setTimeout(()=>{
-        showQuestion();
-    },1500);
-}
-
-/* =======================
-   PYTANIE
-======================= */
-
-function showQuestion(){
-
-    document.body.innerHTML=`
-    <div style="text-align:center;margin-top:80px;color:white;">
-        <img id="mainImg" src="IMG_3395.JPEG" width="260"><br><br>
-        <h1>Czy będziesz moją walentynką? ❤️</h1>
-        <button id="yesBtn">TAK ❤️</button>
-        <button id="noBtn">NIE :(</button>
-        <audio id="music" src="TWOJA_MUZYKA.mp3"></audio>
+        <audio id="music" src=music.mp3></audio>
     </div>
     `;
 
@@ -389,16 +194,6 @@ function showQuestion(){
 
         // zmiana zdjęcia
         document.getElementById("mainImg").src=IMG_3396.JPEG;
-
-        // zmiana tekstu
-        document.querySelector("h1").innerText="JEEEEJ KOCHAM CIE MYSZKA ❤️";
-    });
-}
-</script>
-
-</body>
-</html>
-";
 
         // zmiana tekstu
         document.querySelector("h1").innerText="JEEEEJ KOCHAM CIE MYSZKA ❤️";
