fffUpdate index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function showQuestion(){
         <h1>Czy będziesz moją walentynką? ❤️</h1>
         <button id="yesBtn">TAK ❤️</button>
         <button id="noBtn">NIE :(</button>
-        <audio id="music" src=music.mp3></audio>
+        <audio id="music" src="music.mp3"></audio>
     </div>
     `;
 
@@ -193,13 +193,9 @@ function showQuestion(){
         }
 
         // zmiana zdjęcia
-        document.getElementById("mainImg").src=IMG_3396.JPEG;
+        document.getElementById("mainImg").src="IMG_3396.JPEG";
 
         // zmiana tekstu
         document.querySelector("h1").innerText="JEEEEJ KOCHAM CIE MYSZKA ❤️";
     });
 }
-</script>
-
-</body>
-</html>
