--- a/index.html
+++ b/index.html
@@ -1,209 +1,241 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dla Ciebie ❤️</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dla Ciebie ❤️</title>
 
-<style>
-body{
-    margin:0;
-    overflow:hidden;
-    background:black;
-    font-family: 'Courier New', monospace;
-}
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: black;
+            font-family: 'Courier New', monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-canvas{
-    position:fixed;
-    top:0;
-    left:0;
-    transition: filter 1.5s ease;
-}
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1; /* Gwiazdy w tle */
+            transition: filter 1.5s ease;
+        }
 
-.text{
-    position:absolute;
-    width:100%;
-    top:45%;
-    text-align:center;
-    font-size:28px;
-    color:#ff4da6;
-    letter-spacing:2px;
-}
+        .text {
+            position: absolute;
+            width: 90%;
+            text-align: center;
+            font-size: 24px;
+            color: #ff4da6;
+            letter-spacing: 2px;
+            line-height: 1.5;
+        }
 
-button{
-    padding:15px 30px;
-    font-size:20px;
-    border:none;
-    border-radius:12px;
-    cursor:pointer;
-    margin:10px;
-}
+        #questionContainer {
+            text-align: center;
+            color: white;
+            display: none;
+            z-index: 10;
+            padding: 20px;
+        }
 
-#yesBtn{ background:#ff4da6; color:white; }
-#noBtn{ background:gray; color:white; position:absolute; }
+        h1 { font-size: 22px; margin-bottom: 20px; }
 
-.heart{
-    position:absolute;
-    font-size:22px;
-    animation: floatUp 3s linear forwards;
-}
+        button {
+            padding: 15px 30px;
+            font-size: 18px;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            margin: 10px;
+            touch-action: manipulation; /* Lepsza obsługa na telefonach */
+        }
 
-@keyframes floatUp{
-    from { transform:translateY(0); opacity:1; }
-    to { transform:translateY(-250px); opacity:0; }
-}
-</style>
+        #yesBtn { background: #ff4da6; color: white; position: relative; z-index: 11; }
+        #noBtn { background: gray; color: white; position: absolute; transition: 0.2s; }
+
+        .heart {
+            position: absolute;
+            font-size: 25px;
+            pointer-events: none;
+            z-index: 999;
+            animation: floatUp 3s linear forwards;
+        }
+
+        @keyframes floatUp {
+            0% { transform: translateY(0) scale(1); opacity: 1; }
+            100% { transform: translateY(-100vh) scale(1.5); opacity: 0; }
+        }
+
+        #mainImg {
+            max-width: 80%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 77, 166, 0.5);
+        }
+    </style>
 </head>
 <body>
 
-<!-- CANVAS Z GWIAZDAMI -->
 <canvas id="starfield"></canvas>
 
-<!-- TYPEWRITER TEXT -->
 <div id="text" class="text"></div>
 
-<!-- PYTANIE (na początku ukryte) -->
-<div id="questionContainer" style="text-align:center;margin-top:80px;color:white; display:none;">
-    <img id="mainImg" src="IMG_3395.JPEG" width="260"><br><br>
+<div id="questionContainer">
+    <img id="mainImg" src="IMG_3395.JPEG" alt="Nasze zdjęcie"><br><br>
     <h1>Czy będziesz moją walentynką? ❤️</h1>
     <button id="yesBtn">TAK ❤️</button>
     <button id="noBtn">NIE :(</button>
-    <audio id="music" src="music.mp3"></audio>
+    <audio id="music" src="music.mp3" loop></audio>
 </div>
 
 <script>
 /* =======================
-   GWIAZDY + LEKKI ZOOM
+   GWIAZDY
 ======================= */
-var canvas = document.getElementById("starfield");
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-var ctx = canvas.getContext("2d");
+const canvas = document.getElementById("starfield");
+const ctx = canvas.getContext("2d");
+let stars = [];
+let zoom = 1;
 
-var stars=[];
-for(let i=0;i<400;i++){
-    stars.push({
-        x:Math.random()*canvas.width,
-        y:Math.random()*canvas.height,
-        r:Math.random()*1.2,
-        o:Math.random()
-    });
+function initStars() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    stars = [];
+    for(let i=0; i<400; i++) {
+        stars.push({
+            x: Math.random() * canvas.width,
+            y: Math.random() * canvas.height,
+            r: Math.random() * 1.5,
+            o: Math.random()
+        });
+    }
 }
 
-let zoom=1;
-
-function drawStars(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
+function drawStars() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
     ctx.save();
-    ctx.scale(zoom,zoom);
+    // Przesuwamy środek dla lepszego efektu zoomu
+    ctx.translate(canvas.width/2, canvas.height/2);
+    ctx.scale(zoom, zoom);
+    ctx.translate(-canvas.width/2, -canvas.height/2);
 
-    stars.forEach(s=>{
+    stars.forEach(s => {
         ctx.beginPath();
-        ctx.arc(s.x,s.y,s.r,0,2*Math.PI);
-        ctx.fillStyle="rgba(255,255,255,"+s.o+")";
+        ctx.arc(s.x, s.y, s.r, 0, 2 * Math.PI);
+        ctx.fillStyle = `rgba(255, 255, 255, ${s.o})`;
         ctx.fill();
     });
 
     ctx.restore();
-    zoom+=0.0004;
+    zoom += 0.0005;
     requestAnimationFrame(drawStars);
 }
+
+initStars();
 drawStars();
 
 /* =======================
-   TYPEWRITER INTRO
+   TYPEWRITER
 ======================= */
-const lines=[
-"Julus jestes moim najwiekszym skarbem",
-"nie wyobrazam sobie byc z kims innym",
-"jestes moim sloneczkiem, gwiazda",
-"i wszystkim co istnieje",
-"kocham cie najmocniej na swiecie",
-"i mam jedno pytanie..."
+const lines = [
+    "Julus jestes moim najwiekszym skarbem",
+    "nie wyobrazam sobie byc z kims innym",
+    "jestes moim sloneczkiem, gwiazda",
+    "i wszystkim co istnieje",
+    "kocham cie najmocniej na swiecie",
+    "i mam jedno pytanie..."
 ];
 
-let textDiv=document.getElementById("text");
-let lineIndex=0;
-let charIndex=0;
+const textDiv = document.getElementById("text");
+let lineIndex = 0;
+let charIndex = 0;
 
-function typeWriter(){
-    if(lineIndex<lines.length){
-        if(charIndex<lines[lineIndex].length){
-            textDiv.innerHTML+=lines[lineIndex][charIndex];
+function typeWriter() {
+    if (lineIndex < lines.length) {
+        if (charIndex < lines[lineIndex].length) {
+            textDiv.innerHTML += lines[lineIndex][charIndex];
             charIndex++;
-            setTimeout(typeWriter,35);
-        }else{
-            setTimeout(()=>{
-                textDiv.innerHTML="";
-                charIndex=0;
+            setTimeout(typeWriter, 50);
+        } else {
+            setTimeout(() => {
+                textDiv.innerHTML = "";
+                charIndex = 0;
                 lineIndex++;
                 typeWriter();
-            },1300);
+            }, 1500);
         }
-    }else{
+    } else {
         cinematicTransition();
     }
 }
-setTimeout(typeWriter,1000);
+
+// Start po krótkiej chwili
+setTimeout(typeWriter, 1000);
 
 /* =======================
-   CINEMATIC TRANSITION
+   TRANSICJA I PYTANIE
 ======================= */
-function cinematicTransition(){
-    canvas.style.filter="blur(10px)";
-    textDiv.innerHTML="";
-    setTimeout(()=>{
-        showQuestion();
-    },1500);
+function cinematicTransition() {
+    canvas.style.filter = "blur(8px)";
+    textDiv.style.display = "none";
+    setTimeout(showQuestion, 1000);
 }
 
-/* =======================
-   PYTANIE
-======================= */
-function showQuestion(){
+function showQuestion() {
     const container = document.getElementById("questionContainer");
-    container.style.display = "block";
-
     const music = document.getElementById("music");
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
 
-    music.play();
+    container.style.display = "block";
 
-    noBtn.style.top="60%";
-    noBtn.style.left="55%";
+    // Próba odtworzenia muzyki (wymaga interakcji użytkownika, więc najlepiej zagra po kliknięciu czegokolwiek)
+    music.play().catch(() => {
+        console.log("Autoplay zablokowany. Muzyka ruszy po interakcji.");
+    });
 
-    function move(){
-        noBtn.style.left=Math.random()*(window.innerWidth-100)+"px";
-        noBtn.style.top=Math.random()*(window.innerHeight-50)+"px";
+    function moveNoButton() {
+        const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+        const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+        noBtn.style.left = x + "px";
+        noBtn.style.top = y + "px";
     }
 
-    noBtn.addEventListener("mouseover", move);
-    noBtn.addEventListener("touchstart", move);
+    noBtn.addEventListener("mouseover", moveNoButton);
+    noBtn.addEventListener("touchstart", (e) => {
+        e.preventDefault();
+        moveNoButton();
+    });
 
-    yesBtn.addEventListener("click", ()=>{
-        for(let i=0;i<50;i++){
-            let heart=document.createElement("div");
-            heart.innerHTML="❤️";
-            heart.className="heart";
-            heart.style.left=Math.random()*window.innerWidth+"px";
-            heart.style.top=window.innerHeight+"px";
-            document.body.appendChild(heart);
+    yesBtn.addEventListener("click", () => {
+        // Efekt serduszek
+        for(let i=0; i<50; i++) {
+            setTimeout(() => {
+                const heart = document.createElement("div");
+                heart.innerHTML = "❤️";
+                heart.className = "heart";
+                heart.style.left = Math.random() * 100 + "vw";
+                heart.style.top = "100vh";
+                document.body.appendChild(heart);
+                
+                // Usunięcie serduszka po animacji
+                setTimeout(() => heart.remove(), 3000);
+            }, i * 50);
         }
 
-        // Zmiana zdjęcia i tekstu po kliknięciu TAK
         document.getElementById("mainImg").src = "IMG_3396.JPEG";
         document.querySelector("#questionContainer h1").innerText = "JEEEEJ KOCHAM CIE MYSZKA ❤️";
+        noBtn.style.display = "none";
+        music.play(); // Na wypadek gdyby wcześniej nie ruszyło
     });
 }
 
-/* =======================
-   REAKCJA NA ZMIANĘ ROZMIARU OKNA
-======================= */
-window.addEventListener("resize", function () {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-});
+window.addEventListener("resize", initStars);
 </script>
 
 </body>
